--- a/web/app/cenozo/view-input.tpl.html
+++ b/web/app/cenozo/view-input.tpl.html
@@ -17,7 +17,7 @@
             ng-attr-id="{{ input.key }}"
             name="name"
             ng-model="model.viewModel.record[input.key]"
-            ng-change="input.changed = true"
+            ng-change="changed = true"
             cn-change="model.getEditEnabled() &&
                        true !== input.isConstant( state, model ) &&
                        'view' !== input.isConstant( state, model ) && patch()"
@@ -55,7 +55,7 @@
               <input ng-attr-id="{{ input.key }}"
                 name="name"
                 ng-model="model.viewModel.formattedRecord[input.key][0]"
-                ng-change="input.changed = true"
+                ng-change="changed = true"
                 cn-change="model.getEditEnabled() &&
                            true !== input.isConstant( state, model ) &&
                            'view' !== input.isConstant( state, model ) && patch()"
@@ -179,7 +179,7 @@
             ng-attr-id="{{ input.key }}"
             name="name"
             ng-model="model.viewModel.record[input.key]"
-            ng-change="input.changed = true"
+            ng-change="changed = true"
             cn-change="model.getEditEnabled() &&
                        true !== input.isConstant( state, model ) &&
                        'view' !== input.isConstant( state, model ) &&
@@ -521,7 +521,7 @@
                   true !== input.isConstant( state, model ) &&
                   'view' != input.isConstant( state, model ) &&
                   'file' != input.type &&
-                  !input.changed &&
+                  !changed &&
                   model.viewModel.record[input.key] != model.viewModel.backupRecord[input.key] &&
                   !( !model.viewModel.record[input.key] && !model.viewModel.backupRecord[input.key] )"
            class="col-sm-1 col-slim">
